k8s/rest-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-api
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: rest-api
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
