k8s/rest-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-api
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: api.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rest-api
            port:
              number: 80
